-
Bug
-
Resolution: Done
-
P1: Critical
-
5.0.0 Beta 1
-
None
-
664acbe796bc103e874d6350538013e5b31bd847
New bug following 26617.
See attached test case.
When run on Ubuntu 11.10, all opened applications on the desktop are not responsive anymore. Resizing the widget does not help. I have to kill the process from another newly opened console.
The widget is not resized after it is set to full screen, but if the widget does just show() then the widget is resized even when the layout margins are 0.
- is required for
-
QTBUG-27426 Qt 5.0 Final release tasks
-
- Closed
-
- resulted from
-
QTBUG-26617 showFullScreen() crashes on Mac for widgets with 0 margin layouts
-
- Closed
-